[package]
name = "barfly"
version = "0.1.3"
authors = ["John Quigley <jmquigs@gmail.com>"]
description = "WIP. Donut use. Implement osx dock/windows taskbar apps in rust."
license = "MIT/Apache-2.0"
repository = "https://github.com/jmquigs/rs-barfly"

[dependencies]

[target.x86_64-apple-darwin.dependencies]
cocoa = "*"
objc = "*"
core-graphics = "*"
objc-foundation = "*"
objc_id = "*"
libc = "*"
