[package]
name = "sysbar"
version = "0.1.0"
authors = [
    "John Quigley <jmquigs@gmail.com>",
    "Corey Farwell <coreyf@rwell.org>",
]
description = "Library for interacting with the system's taskbar / tray / statusbar "
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-sysbar/rust-sysbar"

[dependencies]

[target.x86_64-apple-darwin.dependencies]
cocoa = "0.9"
objc = "0.2"
core-graphics = "0.8"
objc-foundation = "0.1"
objc_id = "0.1"
libc = "0.2"
